--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~10.0.5",
     "firebase": "^7.17.2",
     "rxjs": "~6.5.5",
+    "sweetalert2": "^8.11.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
