--- a/angular.json
+++ b/angular.json
@@ -117,8 +117,27 @@
               "devServerTarget": "sorpresa:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "allowedCommonJsDependencies": [
+              "lodash",
+              "firebase",
+              "@angular/common/locales/fr",
+              "lodash/dropRight",
+              "@firebase/app",
+              "firebase/app",
+              "@firebase/database",
+              "@firebase/firestore",
+              "@firebase/functions",
+              "@firebase/performance",
+              "@firebase/remote-config"
+          ]
+          }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "sorpresa"
 }
