Datatables para visualizacion de datos

--- a/package.json
+++ b/package.json
@@ -22,8 +22,14 @@
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "@types/datatables.net": "^1.10.19",
+    "@types/jquery": "^3.5.1",
+    "angular-datatables": "^9.0.2",
     "bootstrap": "^4.5.0",
+    "datatables.net": "^1.10.21",
+    "datatables.net-dt": "^1.10.21",
     "firebase": "^7.17.2",
+    "jquery": "^3.5.1",
     "moment": "^2.27.0",
     "rxjs": "~6.5.5",
     "sweetalert2": "^8.11.1",
