--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "angular-datatables": "^9.0.2",
     "bootstrap": "^4.5.0",
     "datatables.net": "^1.10.21",
+    "datatables.net-buttons": "^1.6.3",
+    "datatables.net-buttons-dt": "^1.6.3",
     "datatables.net-dt": "^1.10.21",
     "firebase": "^7.17.2",
     "jquery": "^3.5.1",
+    "jszip": "^3.5.0",
     "moment": "^2.27.0",
     "rxjs": "~6.5.5",
     "sweetalert2": "^8.11.1",
