--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
+    "@angular/service-worker": "~10.0.5",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@types/datatables.net": "^1.10.19",
     "@types/jquery": "^3.5.1",
